**************
NSCA Changelog
**************

2.9 - 11/04/2011
----------------
- Add config directive to submit directly to checkresults directory (Mike Lindsey)
- Support multi-line check output with 4000 character limit (Mike Lindsey)


2.8 - ??/??/????
----------------
- Added --with-log-facility option to control syslog logging (Ryan Ordway and Brian Seklecki)
- Fixed bug where daemon would segfault if mcrypt library was not initialized before timeout (Holger Weiss)
- Fixed bug with switching from dump file to command file when running under single mode (Ton Voon)
- Fix for small memory leak with running as a single process daemon (Daniel)


2.7.2 - 07/03/2007
------------------
- Fixed bug with NSCA daemon eating CPU if child process couldn't accept a connection in multi-process mode (Chris Wilson)


2.7.1 - 01/29/2007
------------------
- Fixed bug that prevented single mode daemon from working properly
- Added sample scripts for testing functionality to nsca_tests/ (Ton Voon/Altinity)


2.7 - 12/13/2006
----------------
- Fixed crash from malformed command line
- Updated to config.sub and config.guess to latest from GNU Savannah


2.6 - 04/06/2006
----------------
- Spec file fix
- Segfault fix in encryption library cleanup
- Daemon now exits with an error if it can't drop privileges
- Added chroot support (Sean Finney)
- Added support for writing a PID file
- Added support for reloading config files with SIGHUP


2.5 - 01/21/2006
----------------
- Native TCP wrapper support in daemon mode
- Memory leak fix and cleanup (Mark Ferlatte)
- Compiler warning fix (David Binderman)
- max_packet_age=0 will disable packet timestamp checks
- New config.sub and config.guess for checking local system type


2.4 - 07/23/2003
----------------
- Better support for u_int32_t detection
- Minor bug fixes


2.3 - 01/26/2003
----------------
- Minor changes to daemon init code
- Minor Makefile fixes


2.2 - 01/08/2002
----------------